@@ -1,7 +1,7 @@
 Noteworthy changes for version 1.0.0 (2009-06-18)
 =================================================
 
- * Show a notice about portential problems.
+ * Show a notice about potential problems.
 
  * After about 2 years of development, the 1.0 version is now due.
 
