@@ -1,3 +1,11 @@
+2009-07-21  Werner Koch  <wk@g10code.com>
+
+	* engine.h (ENGINE_FLAG_SIGN_FOLLOWS): New macro.
+	* engine.c (engine_encrypt_prepare): Add arg flags.  Change callers.
+	* engine-assuan.c (op_assuan_encrypt): Ditto.  send PREP_ENCRYPT
+	if the sign-follows flag is used.
+	* mimemaker.c (mime_sign_encrypt): Pass new flag.
+
 2009-06-18  Werner Koch  <wk@g10code.com>
 
 	* common.h (struct opt): Add ANNOUNCE_NUMBER.
